# django-trimdocs

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conftest.py  ideas.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
docs/: cli.md  dev-server.md  html-inclusions.md  others.md  readme-file-layout.md  researchtiktoken.py  trim-docs.md
docs/research/: asset-handling.md  asset-tags.md  extra-files.md  file-injection.md  ideas-2-index.md  ideas-2.md  index.md  mandates.md  output-formats.md  path-resolution.md  project-variables.md  source-tree-processing.md
src/trimdocs/: __init__.py  admin.py  apps.py  cli.py  conf.py  forms.py  models.py  nulldown.py  urls.py  utils.py  views.py
src/trimdocs/examples/full/: README.md  __example__.yml  _contents.md
src/trimdocs/examples/minimal/: README.md  README_part.md  __example__.yml  _contents.md
src/trimdocs/management/commands/: dev_serve.py  trimdoc.py  trimdocs.py
src/trimdocs/migrations/: 0001_initial.py  0002_project_readme_filepath.py  0003_pagemodel_origin_path_parent.py
src/trimdocs/settings/: default.py
src/trimdocs/templates/trimdocs/: compile_demo_view.md  contents_demo_view.md  dir_demo_view.md  dir_view.html  example_index.html  indicies_demo_view.md  info_demo_view.md  object_info.md  orig_source_demo_view.md  pagemodel_404.md  pagemodel_detail.html  pagemodel_detail.md  pagemodel_list.md  path_view.html  source_demo_view.md  (+1 more)
src/trimdocs/templatetags/: align.py  breadcrumbs.py  image.py  link_rel.py  toc.py
tests/: test_cli_smoke.py  test_first.py  test_management_compile.py
(+20 files in other folders)
